[package]
name = "types"
version = "1.0.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde_json = "1.0"
serde = {version = "1.0.133", features = ["derive"]}
clap = "~2.34.0"
strum = "0.23"
strum_macros = "0.23"
